test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/function_returns_array.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Array: 
            TLong: 3
            Array: 
              TLong: 4
              Int: 
        None: 
